// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic checkbox 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;

exports[`renders correctly for a disabled checkbox 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      class="c4 c5"
      disabled=""
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;

exports[`renders correctly for an indeterminate checkbox 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  background-color: #7467c0;
  height: 2px;
  width: 10px;
  top: calc(50% - 1px);
  left: calc(50% - 5px);
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      checked=""
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;

exports[`states renders correctly for an checkbox with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c11[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c11:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c11:checked + .c6::before {
  background-color: #7467c0;
  height: 2px;
  width: 10px;
  top: calc(50% - 1px);
  left: calc(50% - 5px);
}

.c11[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="true"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;

exports[`states renders correctly for an checkbox with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c11[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c11:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c11:checked + .c6::before {
  background-color: #7467c0;
  height: 2px;
  width: 10px;
  top: calc(50% - 1px);
  left: calc(50% - 5px);
}

.c11[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;

exports[`states renders correctly for an checkbox with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c11[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c11:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c11:checked + .c6::before {
  background-color: #7467c0;
  height: 2px;
  width: 10px;
  top: calc(50% - 1px);
  left: calc(50% - 5px);
}

.c11[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;

exports[`states renders correctly for an checkbox with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c11[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c11:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c11:checked + .c6::before {
  background-color: #7467c0;
  height: 2px;
  width: 10px;
  top: calc(50% - 1px);
  left: calc(50% - 5px);
}

.c11[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #7467c0;
}

.c4:checked + .c6 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 3px);
  top: calc(50% - 6px);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  height: 10px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-required="false"
    class="c2 c3 c1"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c1"
    />
    <span
      class="c8 c9"
      id="label"
    />
  </label>
</div>
`;
